--- a/style.css
+++ b/style.css
@@ -9,19 +9,12 @@
 body {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;/* 追記 */
+    overflow-x: hidden;
     display: flex;
-    
-}
-.wrapper {
-    margin: auto;
-    width: 100%;
-    
 }
 .header {
     width: 100%;
     height: 77px;
-    width: 100%;
     z-index: 3;
     background-color: white;
     position: relative;
@@ -46,7 +39,6 @@ body {
 }
 .click img {
     margin: 10px;
-    cursor: pointer;
 }
 .main img {
     width: 100%;
@@ -63,12 +55,16 @@ body {
     object-fit: cover;
     position: relative;
 }
+.title,.Eng-ver,h2,.detail-box a,h4,
+.border-height,.news ,footer{
+    opacity: 0.7;
+} 
+
 .title {
     position: absolute;
     right: 111px;
     top: 210px;
     font-size: 1.3em;
-    opacity: 0.7;
     letter-spacing: 2.8px;
 }
 .Eng-ver {
@@ -77,35 +73,28 @@ body {
     top: 250px;
     font-size: 0.8rem;
     letter-spacing: 2px;
-    opacity: 0.7;
-}
-.img-wrap {
-    position: relative;
-    top: 50%;
-    overflow: hidden;
-    padding-top: -200px;
 }
 h1 {
     font-size: 1.4em;
     letter-spacing: 3px;
     margin: 15px 30px 10px 30px;
 }
+.contents {
+    margin: auto 8%;
+}
 .contents p {
-    margin: 0 30px 10px 30px;
+    margin: 20px 30px ;
     font-size: 0.7rem;
     letter-spacing: 2px;
     color: gray;
 }
 .sentence {
-    max-width: 90%;
     font-size: 0.72rem;
     letter-spacing: 2.3px;
     margin:  28px;
-    width: 100%;
     line-height: 22px;
-
 }
-.more {
+.more ,.view-more{
     width: 90%;
     border: solid 1px;
     text-align: center;
@@ -116,13 +105,16 @@ h1 {
     transition: 0.2s;
     cursor: pointer;
 }
-.more:hover {
+.more:hover ,.view-more:hover  {
     background: black;
     color: white;
 }
+.view-more {
+    margin: 180px auto 74px auto;
+}
+
 h2 {
     font-size: 1rem;
-    opacity: 0.6;
     margin: 85px auto 62px auto;
     text-align: center;
     letter-spacing: 2px;
@@ -130,49 +122,37 @@ h2 {
 .products {
     display: flex;
     flex-wrap: wrap;
-    margin: 5%;
-    
+ 
 }
-.photo-list img{
-    width: 222px;
-    height: 216px;
+.scr-target {
+    width: 220px;
+    height: 220px;
+    overflow: hidden;
+  
+}
+.scr-target img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    flex-direction: row-reverse;
     transition: 0.7s;
-    overflow: hidden;
     cursor: pointer;
-}
-.photo-list img:hover {
+    flex-direction: row-reverse;
+    margin: 10%;
+   
+  }
+  .scr-target img:hover {
     opacity: 0.6;
-    transform: scale(1.1);
-}
-.scr-target{
-    margin: 15% 5%;
+    zoom: 1.1;
     overflow: hidden;
-    height: 218px;
-}
-.view-more {
-    width: 90%;
-    border: solid 1px;
-    text-align: center;
-    margin: 180px auto 74px auto;
-    padding: 3%;
-    font-size: 0.7rem;
-    letter-spacing: 2.2px;
-    transition: 0.2s;
-    cursor: pointer;
-}
-.view-more:hover {
-    background: black;
-    color: white;
-}
+    width: 220px;
+    height: 220px;
+  }
+
 .detail-box ,.news{
     list-style: none;
     margin: auto;
-
 }
 .detail-box a {
-    opacity: 0.7;
     border: solid 0.3px;
     border-color:rgb(143, 142, 142);
     width: 72%;
@@ -203,7 +183,6 @@ h2 {
 .story:hover ,.business:hover  {
     background-color: black;
     color: white;
-
 }
 .business {
     margin-top: 30px;
@@ -219,7 +198,6 @@ h4 {
     font-size: 0.7rem;
     letter-spacing: 3px;
     font-family: "ヒラギノ明朝 ProN W3",  serif;
-    opacity: 0.7;
 }
 .news-contents{
     display: flex;
@@ -246,17 +224,14 @@ h4 {
 .border-height {
     border-right: solid 1px gray;
     height: 42px;
-    opacity: 0.7;
     margin: 0px 20px;
 }
-.news ,footer{
-    opacity: 0.7;
-}
+
 .line-top {
     border-right: solid 1px black;
     height: 60px;
     margin: -10px 50%;
-     cursor: pointer;
+    cursor: pointer;
 }
 .top {
     text-align: center;
@@ -273,7 +248,6 @@ h4 {
     letter-spacing: 3px;
     color:#0097b2;
     margin: 5px auto;
-   
 }
 .logo-name img {
     width: 40px;
@@ -285,17 +259,14 @@ h4 {
     letter-spacing: 2px;
     cursor: pointer;
 }
-
 .SNS {
     display: flex;
     width: 100px;
-    margin: 20px auto;
-    
+    margin: 20px auto;  
 }
 .SNS img {
     margin: 10px;
     cursor: pointer;
-
 }
 .copyright {
     margin: 0 auto;
@@ -340,21 +311,21 @@ h4 {
     transform: rotate(-135deg);
     transition: .3s;
 }
+.arrow:hover::before,.arrow:hover::after,.detail-box a:hover,.detail-box p{
+    transition:.5s;
+}
 .arrow:hover::before{
     right: 10px;
     width: 60px;
-    transition:0.5s;
 }
 .arrow:hover::after{
     right: 10px;
-    transition:0.5s;
 }
 .detail-box {
     padding: 20px auto;
 }
 .detail-box a:hover {
     padding-left: 40px;
-    transition: .5s;
 }
 .detail-box p{
     position: absolute;
@@ -364,14 +335,10 @@ h4 {
     border-bottom: solid 1px ;
     width: 10px;
     padding: 20px auto;
-    transition: .5s;
     visibility: hidden;
 }
 .detail-box p:hover {
-    color: black;
-    border-bottom: solid 1px ;
     width: 30px;
-    visibility: hidden;
 }
 
 .fade {
@@ -388,7 +355,6 @@ img {
 }
 
 
-/* アニメーション設定 */
 .scr-target {
     opacity: 0;
     transform: translate3d(0, 30px, 0);
@@ -420,17 +386,18 @@ img {
     height: 1px;
     background-color: black
   }
+  .hamburger span:first-of-type, .hamburger span:nth-of-type(2),
+  .hamburger span:last-of-type,.slide-menu {
+    transition: .5s;
+  }
   .hamburger span:first-of-type {
     top: 0;
-    transition: .5s;
   }
   .hamburger span:nth-of-type(2){
     top: 45%;
-    transition: .5s;
   }
   .hamburger span:last-of-type{
     top: 90%;
-    transition: .5s;
   }
   .slide-menu{
     background-color:white;
@@ -440,7 +407,6 @@ img {
     height: 100%;
     right: 0;
     transform: translateX(100%); 
-    transition: .5s;
     list-style: none;
     z-index: 6;
 }
@@ -449,6 +415,9 @@ img {
   line-height: 400%;
   text-align: center;
   cursor: pointer;
+}
+.slide-menu img {
+    width: 20px;
 }
 .hamburger.active span:first-of-type{
     top: 0;
@@ -466,13 +435,58 @@ img {
   .slide-menu.active{
     transform: translateX(0); 
   }
+  @media screen and (min-width:481px) {
+      
+      
+    }
+    .wrap {
+        width: 80%;
+    }
+    
   
-  @media screen and (min-width:768px) {
+  
+  @media screen and (min-width:960px) {
       .main img {
           height: 100vh;
           right: 0;
           padding-left: 20%;
       }
+      .about {
+          margin-top: 10%;
+          margin-bottom: 20%;
+          width: 50%;
+          display: flex;
+          position: relative;
+      }
+      .about img {
+        width: 100%;
+        height: 400px;
+        padding-right: 10;
+        position: absolute;
+        left: 100%;
+        top: -15%;
+      }
+      .scr-target {
+        width: 300px;
+        height: 300px; 
+        overflow: hidden;
+    }
+    
+    .scr-target img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 0.7s;
+        cursor: pointer;
+        flex-direction: row-reverse;
+        margin: 6%;
+    }
+    .scr-target img:hover {
+        opacity: 0.5;
+        zoom: 1.1;
+        width: 300px;
+        height: 300px; 
+    }
       .title, .Eng-ver {
           left: 11%;
           top: 50%;
@@ -487,8 +501,4 @@ img {
           display: flex;
           flex-wrap: wrap;
       }
-      .products img {
-          max-width: 500px;
-          width: 100%;
-      }
-  }
+    }
