--- a/style.css
+++ b/style.css
@@ -44,8 +44,9 @@ body {
     width: 100%;
     height: 64vh;
     object-fit: cover;
-    margin-top: 77px;
+    margin: 77px auto;
     background-attachment: fixed;
+    transform: scale(-1, 1);
 }
 .about img {
     width: 100%;
@@ -62,14 +63,14 @@ body {
 
 .title {
     position: absolute;
-    right: 111px;
+    left: 30px;
     top: 210px;
     font-size: 1.3em;
     letter-spacing: 2.8px;
 }
 .Eng-ver {
     position: absolute;
-    right: 20px;
+    left: 30px;
     top: 250px;
     font-size: 0.8rem;
     letter-spacing: 2px;
@@ -79,11 +80,11 @@ h1 {
     letter-spacing: 3px;
     margin: 15px 30px 10px 30px;
 }
-.contents {
-    margin: auto 8%;
+.contents img{
+    margin: 0 auto ;
 }
 .contents p {
-    margin: 20px 30px ;
+    margin: 10px 30px ;
     font-size: 0.7rem;
     letter-spacing: 2px;
     color: gray;
@@ -95,11 +96,11 @@ h1 {
     line-height: 22px;
 }
 .more ,.view-more{
-    width: 90%;
+    width: 100%;
     border: solid 1px;
     text-align: center;
-    margin: 30px auto 74px auto;
-    padding: 3%;
+    margin: 30px 0 74px 0;
+    padding: 2.7%;
     font-size: 0.7rem;
     letter-spacing: 2.2px;
     transition: 0.2s;
@@ -122,12 +123,14 @@ h2 {
 .products {
     display: flex;
     flex-wrap: wrap;
+    
  
 }
 .scr-target {
-    width: 220px;
-    height: 220px;
+    width: 250px;
+    height: 250px;
     overflow: hidden;
+    margin: auto;
   
 }
 .scr-target img {
@@ -137,8 +140,7 @@ h2 {
     transition: 0.7s;
     cursor: pointer;
     flex-direction: row-reverse;
-    margin: 10%;
-   
+    margin: 8%;
   }
   .scr-target img:hover {
     opacity: 0.6;
@@ -152,10 +154,13 @@ h2 {
     list-style: none;
     margin: auto;
 }
+.detail-box {
+    padding: 20px auto;
+}
 .detail-box a {
     border: solid 0.3px;
     border-color:rgb(143, 142, 142);
-    width: 72%;
+    width: 85%;
     padding: 30px 20px;
     margin: 10px 14%;
     font-size: 0.8rem;
@@ -165,13 +170,29 @@ h2 {
     cursor: pointer;
 }
 
+.detail-box a:hover {
+    padding-left: 40px;
+}
+.detail-box p{
+    position: absolute;
+    top: 40px;
+    color: black;
+    border-bottom: solid 1px ;
+    width: 10px;
+    padding: 20px auto;
+    visibility: hidden;
+}
+.detail-box p:hover {
+    width: 30px;
+}
+
 .information {
     padding-top: 60px;
 }
 .story,.business {
     border: solid 1px;
     border-color:black;
-    width: 70%;
+    width: 85%;
     padding: 5%;
     margin: 20px auto;
     font-size: 0.7rem;
@@ -321,25 +342,7 @@ h4 {
 .arrow:hover::after{
     right: 10px;
 }
-.detail-box {
-    padding: 20px auto;
-}
-.detail-box a:hover {
-    padding-left: 40px;
-}
-.detail-box p{
-    position: absolute;
-    top: 40px;
-    left: -20px;
-    color: black;
-    border-bottom: solid 1px ;
-    width: 10px;
-    padding: 20px auto;
-    visibility: hidden;
-}
-.detail-box p:hover {
-    width: 30px;
-}
+
 
 .fade {
 	opacity: 0;
@@ -348,10 +351,6 @@ h4 {
 }.fade.active {
 	opacity: 1;
 	transform: translateY(0px);
-}
-
-img {
-    max-width: 100%;
 }
 
 
@@ -436,20 +435,32 @@ img {
     transform: translateX(0); 
   }
   @media screen and (min-width:481px) {
-      
-      
     }
     .wrap {
-        width: 80%;
+        width: 98%;
     }
-    
-  
+  @media screen and (min-width:760px) {
+    .scr-target img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 0.7s;
+        cursor: pointer;
+        flex-direction: row-reverse;
+        margin: 6%;
+    }
+    .scr-target img:hover {
+        opacity: 0.5;
+        zoom: 1.1;
+        max-width: 300px;
+        max-height: 300px; 
+    }
   
   @media screen and (min-width:960px) {
       .main img {
           height: 100vh;
           right: 0;
-          padding-left: 20%;
+          padding-right: 20%;
       }
       .about {
           margin-top: 10%;
@@ -471,7 +482,6 @@ img {
         height: 300px; 
         overflow: hidden;
     }
-    
     .scr-target img{
         width: 100%;
         height: 100%;
@@ -484,10 +494,10 @@ img {
     .scr-target img:hover {
         opacity: 0.5;
         zoom: 1.1;
-        width: 300px;
-        height: 300px; 
+        max-width: 400px;
+        max-height: 400px; 
     }
-      .title, .Eng-ver {
+      .title{
           left: 11%;
           top: 50%;
           font-size: 2rem;
@@ -501,4 +511,4 @@ img {
           display: flex;
           flex-wrap: wrap;
       }
-    }
+  }}
