--- a/style.css
+++ b/style.css
@@ -62,15 +62,15 @@ body {
 } 
 .title {
     position: absolute;
-    left: 30px;
-    top: 210px;
+    left: 8%;
+    top: 35%;
     font-size: 1.3em;
     letter-spacing: 2.8px;
 }
 .Eng-ver {
     position: absolute;
-    left: 30px;
-    top: 250px;
+    left: 8%;
+    top: 40%;
     font-size: 0.8rem;
     letter-spacing: 2px;
 }
@@ -467,12 +467,19 @@ h4 {
         display: flex;
         width: 90%;
         flex-wrap: wrap;
-        margin: auto;
-        
+        margin: 0 auto;
+    }
+    .box:last-child {
+       
+        margin: 0 auto;
     }
     .box{
-        width: 40%;
+        width: 46%;
         margin: 2%;
+    }
+    .arrow::before{
+        width: 15%;
+        
     }
     
   
@@ -484,23 +491,45 @@ h4 {
       }
       .about {
           margin-top: 10%;
-          margin-bottom: 20%;
-          width: 50%;
+          margin-bottom: 50%;
+          width: 100%;
           display: flex;
           position: relative;
       }
       .about img {
-        width: 100%;
-        height: 400px;
-        padding-right: 10;
+        width: 45%;
+        height: 380px;
         position: absolute;
-        left: 100%;
-        top: -15%;
+        left: 50%;
+        margin: auto;
       }
+      .sentence
+      {
+          position: absolute;
+          width: 38%;
+          left: 8%;
+      }
+      h1,.about p, .about .more{
+          margin-left: 0%;
+      }
+      .details {
+          margin-bottom: 16%;
+          margin-top: -18%;
+      }
+      h1 {
+          font-size: 1.5rem;
+          margin-bottom: 5%;
+      }
+      .about .more {
+          width: 50%;
+          margin-top: 10%;
+      }
+      
       .scr-target {
         width: 300px;
         height: 300px; 
         overflow: hidden;
+        margin: auto;
     }
     .scr-target img{
         width: 100%;
@@ -531,4 +560,28 @@ h4 {
           display: flex;
           flex-wrap: wrap;
       }
-  }}
+      .detail-box {
+      flex-wrap: wrap;
+      }
+
+      .detail-box,  .information {
+        display: flex;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .box{
+        width: 29%;
+        margin: 2%;
+    }
+   
+    .story ,.business {
+        width: 46%;
+        padding: 4.3%;
+        margin: 2%;
+        font-size: 1rem;
+    }
+    .more {
+        width: 30%;
+        padding: 1.3%;
+    }
+}}
