--- a/style.css
+++ b/style.css
@@ -5,30 +5,34 @@
     box-sizing: border-box;
     font-family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", serif;
     font-weight: lighter;
+    letter-spacing: 2.5px;
+}
+body ,.header, .main img ,.about img ,.hamburger span,footer{
+    width: 100%;
 }
 body {
-    width: 100%;
     overflow-x: hidden;
     display: flex;
 }
 .header {
-    width: 100%;
     height: 77px;
     z-index: 3;
     background-color: white;
     position: relative;
     position: fixed;
 }
+.logo img, .name, .click img,.hamburger,.scr-target img,.ItemBox,
+.detail-box,.line-top,.top,.policy,.SNS img,.arrow,.slide-menu,.news {
+    cursor: pointer;
+}
 .logo img{
     width: 40px;
     margin: 5px 30px 0 30px;
-    cursor: pointer;
 }
 .name {
     font-size: 0.8rem;
     color: #0097b2;
     margin: 0 30px;
-    cursor: pointer;
 }
 .click {
     display: flex;
@@ -39,55 +43,158 @@ body {
 .click img {
     margin: 18px 8px;
 }
-.main img {
-    width: 100%;
-    height: 64vh;
+.click img:hover{
+    opacity: .5;
+}
+.header-area{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+  }
+  .hamburger{
+    width: 18px;
+    height: 15px;
+    right: 20px;
+    position: relative;
+    position: fixed;
+    top: 33px;
+  }
+  .hamburger span{
+    position: absolute;
+    height: 1px;
+    background-color: black
+  }
+  .hamburger span:first-of-type, .hamburger span:nth-of-type(2),
+  .hamburger span:last-of-type,.slide-menu {
+    transition: .5s;
+  }
+  .hamburger span:first-of-type {
+    top: 0;
+  }
+  .hamburger span:nth-of-type(2){
+    top: 45%;
+  }
+  .hamburger span:last-of-type{
+    top: 90%;
+  }
+  .slide-menu{
+    background-color:white;
+    position: fixed;
+    top: 75px;
+    width: 60%;
+    height: 100%;
+    right: 0;
+    transform: translateX(100%); 
+    list-style: none;
+    z-index: 6;
+}
+.slide-menu li{
+  color: black;
+  line-height: 300%;
+  margin-left: 16%;
+}
+.slide-menu p{
+    font-size: 0.5rem;
+    margin-left: 5%;
+}
+.slide-menu img {
+    width: 15px;
+}
+.contact img{
+    margin: 7%;
+}
+.slide-menu .search,.mainOutline a,.productOutline p ,.top,.copyright {
+    opacity: .5;
+}
+.borderBottom{
+    border-bottom: solid 1px;
+    width: 200px;
+}
+.search img{
+    margin-left: 180px;
+}
+.slide-menu .number {
+    margin-top: 10%;
+}
+.hamburger.active span:first-of-type{
+    top: 0;
+  }
+  .hamburger.active span:nth-of-type(2){
+    top: 45%;
+    right: 0;
+    width: 70%;
+  }
+  .hamburger.active span:last-of-type{
+    top: 90%;
+    right: 0;
+    width: 50%;
+  }
+  .slide-menu.active{
+    transform: translateX(0); 
+  }
+.main img, .about img,.scr-target img{
     object-fit: cover;
+}
+.main img {
+    height: 64vh;
     margin: 77px auto;
     background-attachment: fixed;
     transform: scale(-1, 1);
+    position: relative;
 }
 .about img {
-    width: 100%;
     height: 27vh;
     margin-top: 0px;
     padding: 0 28px;
-    object-fit: cover;
-    position: relative;
 }
-.title,.Eng-ver,h2,.detail-box a,h4,
-.border-height,.news ,footer{
-    opacity: 0.7;
+.title,.Eng-ver,h2,.detail-box a,h4,.border-height,.news ,footer{
+    opacity: 0.6;
 } 
 .title {
     position: absolute;
-    left: 8%;
-    top: 35%;
+    left: 10%;
+    top: 29%;
     font-size: 1.3em;
-    letter-spacing: 2.8px;
 }
 .Eng-ver {
     position: absolute;
-    left: 8%;
-    top: 40%;
-    font-size: 0.8rem;
-    letter-spacing: 2px;
+    left: 10%;
+    top: 34%;
+}
+.slide-menu li,.Eng-ver,.productOutline p,.sentence,
+.detail-box a,h4,.date ,.news-contents p ,.top{
+    font-size: 0.72rem;
+}
+.mainOutline{
+    margin: auto 0 30px -20px; 
+}
+.mainOutline a {
+    margin-left: 20px;
 }
 h1 {
-    font-size: 1.5em;
-    letter-spacing: 3px;
-    margin: 15px 30px 10px 30px;
+    font-size: 1.5rem;
+    margin: 15px 30px 10px 20px;
 }
-.contents p, .ItemName, .price {
-    margin: 10px 30px ;
+.productOutline{
+    margin: auto 0 30px 20px;
+}
+.productOutline p {
+    margin-left: 20px;
+}
+.contents p, .ItemName, .price{
+    margin: 10px ;
     font-size: 0.7rem;
-    letter-spacing: 2px;
     color: gray;
 }
+.ItemName {
+    margin-top: 5%;
+}
+.price {
+    margin-bottom: 15%;
+}
 .sentence {
-    font-size: 0.72rem;
-    letter-spacing: 2.3px;
-    width: 90%;
+    width: 88%;
     margin:  6% auto;
     line-height: 22px;
 }
@@ -103,20 +210,18 @@ h1 {
     text-align: center;
     padding: 2.7%;
     font-size: 0.7rem;
-    letter-spacing: 2.2px;
     transition: 0.2s;
     cursor: pointer;
+    margin-bottom: 18%;
 }
 .more:hover ,.view-more:hover  {
     background: black;
     color: white;
 }
-
 h2 {
     font-size: 0.95rem;
     margin: 85px auto 50px auto;
     text-align: center;
-    letter-spacing: 2px;
 }
 .products {
     display: flex;
@@ -125,55 +230,43 @@ h2 {
     width: 98%;
     margin: auto;
 }
-
 .scr-target{
    opacity: 0;
    transform: translate3d(0, 30px, 0);
    overflow: hidden;
-   width: 225px;
-   height: 205px;
+   width: 230px;
+   height: 230px;
 }
 .scr-target img {
     width: 100%;
     height: 100%;
     transition: 0.7s;
-    cursor: pointer;
-    object-fit: cover;
     padding: 0 10px;
   }
   .scr-target img:hover {
     opacity: 0.6;
     zoom: 1.1;
-    overflow: hidden;
-    width: 240px;
-    height: 240px;
+    width: 230px;
+    height: 230px;
   }
-
 .scr-target.is-active {
     opacity: 1;
     transform: translate3d(0, 0, 0);
     transition: 1s;
 }
-
- 
 .detail-box ,.news{
     list-style: none;
     margin: 0 14%;
 }
-
 .detail-box a {
     border: solid 0.3px;
     border-color:rgb(143, 142, 142);
     width: 100%;
     padding: 29px 20px;
     margin: 3% auto;
-    font-size: 0.8rem;
-    letter-spacing: 2.2px;
     color: black;
     transition: .3s;
-    cursor: pointer;
 }
-
 .detail-box a:hover {
     padding-left: 40px;
 }
@@ -189,7 +282,6 @@ h2 {
 .detail-box p:hover {
     width: 30px;
 }
-
 .information {
     padding-top: 70px;
 }
@@ -200,10 +292,10 @@ h2 {
     padding: 5%;
     margin: 16px auto 20px auto;
     font-size: 0.7rem;
-    letter-spacing: 2.5px;
     text-align: center;
     transition: 0.3s;
     cursor: pointer;
+    opacity: .7;
 }
 .story:hover ,.business:hover  {
     background-color: black;
@@ -215,63 +307,48 @@ h2 {
 h3 {
     padding: 100px 20px 8px 30px;
     font-size: 1.6rem;
-    letter-spacing: 3px;
     font-family: "游明朝",  serif;
 }
 h4 {
     padding: 0 20px 30px 30px;
-    font-size: 0.7rem;
-    letter-spacing: 3px;
     font-family: "ヒラギノ明朝 ProN W3",  serif;
 }
 .news-contents{
     display: flex;
+    margin-left: 55px;
 }
 .date {
-    margin-left: 55px;
     line-height: 22px;
-    letter-spacing: 2.6px;
-    font-size: 0.7rem;
     margin-bottom: 30px;
     text-align: center;
 }
 .news {
     margin: auto;
-    margin-top: 6%;
+    margin-top: 2%;
 }
 .news-contents p {
     line-height: 18px;
-    font-size: 0.7rem;
-    max-width: 220px;
+    font-size: 0.75rem;
+    width: 45%;
     color: black;
-    margin-bottom: 7%;
-    margin-left: 0;
 }
 .border-height {
     border-right: solid 1px gray;
     height: 42px;
     margin: 0px 20px;
 }
-
 .line-top {
     border-right: solid 1px black;
     height: 60px;
     margin: -2% 50%;
-    cursor: pointer;
 }
 .top {
     text-align: center;
-    font-size: 0.8rem;
     margin: 3.5% auto 5% auto;
-    letter-spacing: 2px;
-    opacity: 0.6;
-    cursor: pointer;
 }
-
 .logo-name{
     text-align: center;
     font-size: 2.1rem;
-    letter-spacing: 3px;
     color:#0097b2;
     margin: 5px auto;
 }
@@ -282,8 +359,6 @@ h4 {
 .policy {
     font-size: 0.6rem;
     text-align: center;
-    letter-spacing: 2px;
-    cursor: pointer;
 }
 .SNS {
     display: flex;
@@ -292,13 +367,10 @@ h4 {
 }
 .SNS img {
     margin: 10px;
-    cursor: pointer;
 }
 .copyright {
     margin: 0 auto;
     font-size: 0.6rem;
-    opacity: 0.5;
-    letter-spacing: 3.2px;
     text-align: center;
     padding-bottom: 40px;
 }
@@ -306,7 +378,6 @@ h4 {
     display:inline-block;
     color:black;
     border:1px solid;
-    cursor:pointer;
     position: relative;
     text-decoration: none;
 }
@@ -355,119 +426,35 @@ h4 {
 	opacity: 1;
 	transform: translateY(0px);
 }
-
-.header-area{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    align-items: center;
-  }
-  .hamburger{
-    width: 18px;
-    height: 15px;
-    right: 20px;
-    position: relative;
-    position: fixed;
-    top: 33px;
-    cursor: pointer;
-  }
-  .hamburger span{
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: black
-  }
-  .hamburger span:first-of-type, .hamburger span:nth-of-type(2),
-  .hamburger span:last-of-type,.slide-menu {
-    transition: .5s;
-  }
-  .hamburger span:first-of-type {
-    top: 0;
-  }
-  .hamburger span:nth-of-type(2){
-    top: 45%;
-  }
-  .hamburger span:last-of-type{
-    top: 90%;
-  }
-  .slide-menu{
-    background-color:white;
-    position: fixed;
-    top: 75px;
-    width: 60%;
-    height: 100%;
-    right: 0;
-    transform: translateX(100%); 
-    list-style: none;
-    z-index: 6;
-}
-.slide-menu li{
-  color: black;
-  line-height: 400%;
-  text-align: center;
-  cursor: pointer;
-}
-.slide-menu img {
-    width: 20px;
-}
-.hamburger.active span:first-of-type{
-    top: 0;
-  }
-  .hamburger.active span:nth-of-type(2){
-    top: 45%;
-    right: 0;
-    width: 70%;
-  }
-  .hamburger.active span:last-of-type{
-    top: 90%;
-    right: 0;
-    width: 50%;
-  }
-  .slide-menu.active{
-    transform: translateX(0); 
-  }
-  
   @media screen and (max-width:379px) {
-      
       .scr-target {
         width: 160px;
         height: 160px;
         overflow: hidden;
         margin: auto;
     }
-    .scr-target img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: 0.7s;
-        cursor: pointer;
-        flex-direction: row-reverse;
-       
-      }
       .scr-target img:hover {
-        opacity: 0.6;
-        zoom: 1.1;
-        overflow: hidden;
         width: 160px;
         height: 160px;
       }
     }
-
-   
-  @media screen and (min-width:680px) {
+  @media screen and (min-width:730px) {
+    .more, .view-more{
+        padding: 1.7%;
+    }
     .products {
         justify-content: center;
     }
     .scr-target{
-        width: 321px;
-        height: 291px;
+        width: 350px;
+        height: 350px;
      }
     .scr-target img {
         padding: 0 15px;
     }
     .scr-target img:hover {
-        width: 321px;
-        height: 321px;
+        width: 350px;
+        height: 350px;
         overflow: hidden;
     }
     .about  {
@@ -478,22 +465,19 @@ h4 {
         height: 380px;
         margin-top: 8%;
       }
-
-      .outline h1, .outline p {
-          font-size: 1.5rem;
+      .outline p {
+        font-size: 1.5rem;
       }
       .sentence {
         width: 93%;
-     
     }
-    .detail-box {
+    .detail-box, .information{
         display: flex;
-        width: 90%;
+        width: 80%;
         flex-wrap: wrap;
         margin: 0 auto;
     }
     .box:last-child {
-       
         margin: 0 auto;
     }
     .box{
@@ -502,10 +486,7 @@ h4 {
     }
     .arrow::before{
         width: 15%;
-        
     }
-    
-  
   @media screen and (min-width:981px) {
       .main img {
           height: 100vh;
@@ -513,90 +494,108 @@ h4 {
           padding-right: 20%;
       }
       .about {
-          margin-top: 10%;
+          margin-top: 3%;
           margin-bottom: 50%;
-          width: 100%;
+          width: 82%;
           display: flex;
           position: relative;
       }
       .about img {
-        width: 45%;
-        height: 380px;
+        width: 55%;
+        height: 480px;
         position: absolute;
-        left: 50%;
+        left: 48%;
         margin: auto;
       }
       .sentence {
           position: absolute;
-          width: 38%;
-          left: 8%;
+          width: 45%;
+          opacity: .7;
       }
       h1,.about p, .about .more{
           margin-left: 0%;
       }
       .outline {
           margin-bottom: 16%;
-          margin-top: -18%;
+          margin-top: -17%;
       }
-      h1 {
-          font-size: 1.5rem;
-          margin-bottom: 5%;
+      .contents {
+          width: 98%;
+          margin: auto;
+      }
+      .outline p {
+          font-size: .7rem;
       }
       .about .more {
           width: 50%;
           margin-top: 10%;
       }
     .products {
-        width: 90%;
+        width: 96%;
         display: flex;
         margin: auto;
         justify-content: center;
     }
     .scr-target {
-        width: 380px;
-        height: 350px;
+        width: 390px;
+        height: 390px;
     }
-    
     .scr-target img:hover {
-        width: 380px;
-        height: 380px; 
+        width: 390px;
+        height: 390px; 
     }
       .title{
-          left: 11%;
           top: 50%;
           font-size: 2rem;
       }
       .Eng-ver {
-          top: 55%;
-          margin-top: 25px;
+          top: 58%;
           font-size: 0.8rem;
       }
-      
       .detail-box {
           flex-wrap: wrap;
       }
-
-      .detail-box,  .information {
-        display: flex;
-        width: 80%;
-        margin: 0 auto;
-    }
     .box{
         width: 29%;
         margin: 2%;
     }
-   
     .story ,.business {
         width: 46%;
-        padding: 4.3%;
+        padding: 3% 5%;
         margin: 2%;
         font-size: 1rem;
     }
-    .more {
+    .more,.view-more {
         width: 30%;
-        padding: 1.3%;
+        padding: 1.2%;
     }
     .news {
-        margin-left: 10%;
+        margin-left: 3%;
+    }
+    footer {
+        display: flex;
+        height: auto;
+        position: relative;
+        margin-bottom: 7%;
+    }
+    .logo-name {
+        position: absolute;
+        left: 5%;
+        top: -20px;
+    }
+    .policy {
+        position: absolute;
+        left: 18%;
+        bottom: -25px;
+    }
+    .SNS {
+        position: absolute;
+        right: 4%;
+        top: -30px;
+    }
+    .copyright {
+        position: absolute;
+        right: 5%; 
+        top: 25px;
     }
 }}
