--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     font-weight: lighter;
     letter-spacing: 2.5px;
 }
+
+img {
+    max-width: 100%;
+}
+
 body ,.header, .main img ,.about img ,.hamburger span,footer{
     width: 100%;
 }
@@ -236,6 +241,7 @@ h2 {
    overflow: hidden;
    width: 230px;
    height: 230px;
+  box-sizing: border-box;
 }
 .scr-target img {
     width: 100%;
@@ -494,11 +500,12 @@ h4 {
           padding-right: 20%;
       }
       .about {
-          margin-top: 3%;
-          margin-bottom: 50%;
+          margin: 30% auto;
+         
           width: 82%;
           display: flex;
           position: relative;
+          align-items: center;
       }
       .about img {
         width: 55%;
