--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body ,.header, .main img ,.about img ,.hamburger span,footer{
     width: 100%;
 }
 body {
+    max-width: 1020px;
     overflow-x: hidden;
     display: flex;
 }
@@ -232,29 +233,29 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 98%;
+    width: 90%;
     margin: auto;
 }
-.scr-target{
+.scr-target {
    opacity: 0;
    transform: translate3d(0, 30px, 0);
    overflow: hidden;
-   width: 230px;
-   height: 230px;
-  box-sizing: border-box;
+   display: flex;
+   justify-content: space-between;
+ 
 }
-.scr-target img {
+.Item{
+    width: 30%;/*お好みで*/
+    
+  }
+  .Item-Img{
     width: 100%;
-    height: 100%;
-    transition: 0.7s;
-    padding: 0 10px;
+    padding-top: 100%;
+    margin: 10px;
+    
   }
-  .scr-target img:hover {
-    opacity: 0.6;
-    zoom: 1.1;
-    width: 230px;
-    height: 230px;
-  }
+  
+
 .scr-target.is-active {
     opacity: 1;
     transform: translate3d(0, 0, 0);
@@ -432,6 +433,7 @@ h4 {
 	opacity: 1;
 	transform: translateY(0px);
 }
+
   @media screen and (max-width:379px) {
       .scr-target {
         width: 160px;
